objects/OIC_Quadruplet__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Id__c</fullName>
        <formula>Brand__c</formula>
        <label>Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_SDH_Id__c</fullName>
        <formula>Brand__r.SDHBRANDID__c</formula>
        <label>Brand SDH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>OIC Quadruplets</relationshipLabel>
        <relationshipName>OIC_Quadruplets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Type_Id__c</fullName>
        <formula>Device_Type__c</formula>
        <label>Device Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_Name__c</fullName>
        <formula>Device_Type__r.Name</formula>
        <label>Device Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_SDH_Id__c</fullName>
        <formula>Device_Type__r.SDHDEVICETYPEID__c</formula>
        <label>Device Type SDH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Type</label>
        <referenceTo>DeviceType__c</referenceTo>
        <relationshipLabel>OIC Quadruplets</relationshipLabel>
        <relationshipName>OIC_Quadruplets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Range_Id__c</fullName>
        <formula>Range__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Range Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_Name__c</fullName>
        <formula>Range__r.Name</formula>
        <label>Range Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_SDH_Id__c</fullName>
        <formula>Range__r.SDHCategoryID__c</formula>
        <label>Range SDH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Range</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>OIC Quadruplets</relationshipLabel>
        <relationshipName>OIC_Quadruplets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelevantForIPCreation__c</fullName>
        <label>Relevant For IP Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Range_Id__c</fullName>
        <formula>Sub_Range__c</formula>
        <label>Sub Range Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Range_Name__c</fullName>
        <formula>Sub_Range__r.Name</formula>
        <label>Sub Range Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Range_SDH_Id__c</fullName>
        <formula>Sub_Range__r.SDHCategoryID__c</formula>
        <label>Sub Range SDH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Range__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Range</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>OIC Quadruplets (Sub Range)</relationshipLabel>
        <relationshipName>OIC_Quadruplets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_id__c</fullName>
        <formula>Brand_Id__c +&apos;-&apos;+ Device_Type_Id__c +&apos;-&apos;+  Range_Id__c +&apos;-&apos;+ Sub_Range_Id__c</formula>
        <label>Tech_id</label>
        <type>Text</type>
    </fields>
    <label>OIC Quadruplet</label>
    <nameField>
        <displayFormat>OIC-{00000000}</displayFormat>
        <label>OIC Quadruplet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OIC Quadruplets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>